[workspace]
members = [
]
[package]
name = "proxychains_rs"
authors = ["AdySec"]
version = "5.0.0"
publish = false
edition = "2021"
autobins = false

[lib]
name = "proxychains_rs"
path = "src/lib.rs"
crate-type = ["cdylib", "staticlib", "rlib"]
[dependencies]
libc = "0.2"
ctor = "0.6.1"
[build-dependencies]
cc = "1.0"
